[metadata]
name = ds-eda-cleaning-pipeline
version = 0.1.0
description = Demo-friendly EDA + cleaning pipeline with CI artifacts
author = Anderson Bueno

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pandas
    numpy
    pyyaml
    matplotlib

[options.packages.find]
where = .
